@@ -1,3 +1,7 @@
+[B]2.0.7[/B]
+- fix mistake in code refactoring
+
+
 [B]2.0.6[/B]
 - update name and branding after mediaset branding change
 - Fix assets request after site change
